--- a/my-book-app/src/global_styles.css
+++ b/my-book-app/src/global_styles.css
@@ -197,10 +197,15 @@ button {
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 2400px;
   padding: var(--space-3);
 }
+
+.container_2 {
+  max-width: 2400px;
+  padding: var(--space-3);
+}
+
 
 .card {
   background-color: var(--bg-secondary);
